# orchestrator-service/src/main/java/com/nikguscode/orchestrator/controller/UserController.java
@@ -5,17 +5,16 @@ import com.nikguscode.orchestrator.dao.user.UserDao;
 import com.nikguscode.orchestrator.mapper.UserDtoMapper;
 import com.nikguscode.orchestrator.model.User;
 import java.time.OffsetDateTime;
+import java.util.UUID;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping("/users")
 public class UserController {
   private final UserDao userDao;
   private final UserDtoMapper userDtoMapper;
@@ -27,23 +26,28 @@ public class UserController {
     this.userDtoMapper = userDtoMapper;
   }
 
-  @GetMapping("/{maxId}")
+  @GetMapping("/users/{maxId}")
   public String getUser(@PathVariable Long maxId) {
-    System.out.println(userDao.get(maxId));
+    System.out.println(userDao.findByMaxId(maxId));
     return "zaglushka";
   }
 
-  @PutMapping("/{maxId}")
+  @PutMapping("/users/{maxId}")
   public String editUser(@RequestBody UserRequestDto dto) {
     User user = userDtoMapper.dtoToUser(dto, OffsetDateTime.now());
     userDao.update(user);
     return "zaglushka";
   }
 
-  @PostMapping
+  @PostMapping("/users")
   public String addUser(@RequestBody UserRequestDto dto) {
     User user = userDtoMapper.dtoToUser(dto, OffsetDateTime.now());
     userDao.add(user);
     return "zaglushka";
+  }
+
+  @PutMapping("organizations/{organizationId}/users/{maxId}/role")
+  public String updateUserRole(@PathVariable UUID organizationId, @PathVariable Long maxId) {
+    return null;
   }
 }
