# orchestrator-service/src/main/java/com/nikguscode/orchestrator/model/Queue.java
@@ -1,0 +1,17 @@
+package com.nikguscode.orchestrator.model;
+
+import java.time.OffsetDateTime;
+import java.util.UUID;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.ToString;
+
+@Builder
+@Getter
+@ToString
+public class Queue {
+  private final UUID id;
+  private final UUID organizationId;
+  private final String name;
+  private final OffsetDateTime createdAt;
+}
